# explorer

./: .env.example  .gitignore  README.md  ground_truth.md  plan.md  pyproject.toml
.github/: copilot-instructions.md
docs/: ground_truths.md  plan.md
examples/: square_well_schrodinger.md
prompts/: coder.md  coder_tools.md  findings.md  planner.md  planner_direct.md  planner_replan.md  reflector.md  triage.md
scripts/: monitor_run.sh
skills/numerical-optimization/: SKILL.md
skills/python-testing/: SKILL.md
skills/quantum-mechanics/: SKILL.md
src/: cli.py
src/orchestrator/: __init__.py  nodes.py  reporter.py  skills.py  state.py  transcript.py
src/orchestrator/nodes/: __init__.py  _coder.py  _planner.py  _reflector.py  _shared.py  _tools.py  _verifier.py  coder.py  planner.py  reflector.py  shared.py  tools.py  verifier.py
tests/: conftest.py  test_e2e_schrodinger.py  test_integration.py  test_nodes.py  test_reporter.py  test_skills.py  test_tools.py  test_transcript.py
